--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ streamlit
 langchain
 langchain-community
 langchain-google-genai
-chromadb
+chromadb==0.3.29
 google-generativeai
 sentence-transformers
